--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "nonce-str",
   "version": "1.0.0",
-  "description": "nonce-str",
+  "description": "Generate a nonce string.",
   "main": "lib/index.js",
   "module": "src/index.js",
   "scripts": {
-    "build": "BABEL_ENV=rollup rollup -c",
     "test": "BABEL_ENV=ava nyc ava --verbose --timeout=10s",
-    "test-no-cov": "BABEL_ENV=ava ava --verbose --timeout=10s",
-    "prepublish": "npm run build",
     "report-cov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "files": [
-    "lib/",
-    "src/"
+    "index.js"
   ],
   "repository": {
     "type": "git",
@@ -36,7 +32,7 @@
       "babelrc": true
     },
     "files": [
-      "test/*.js"
+      "test.js"
     ]
   },
   "devDependencies": {
@@ -50,16 +46,8 @@
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.24.1",
     "nyc": "^11.1.0",
-    "codecov": "^2.3.0",
-    "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.23.0"
+    "codecov": "^2.3.0"
   }
 }
